Fix ::selection bug
No issue

Fixes a weird issue where text would overlap other text.

--- a/ghost/admin/assets/sass/patterns/global.scss
+++ b/ghost/admin/assets/sass/patterns/global.scss
@@ -20,15 +20,11 @@ body {
 }
 
 ::-moz-selection {
-    color: $darkgrey;
     background: lighten($blue, 20%);
-    text-shadow: none;
 }
 
 ::selection {
-    color: $darkgrey;
     background: lighten($blue, 20%);
-    text-shadow: none;
 }
 
 h1, h2, h3,
